<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:gravity="center">

    <Button
        android:id="@+id/button_main_submit"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/text_button_submit"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_main_view"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/text_button_main_view"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_main_network"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/text_button_main_network"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_main_arch"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/text_button_main_arch"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/button_main_login"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/text_button_main_login"
        android:textAllCaps="false"/>

</LinearLayout>