<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:padding="50dp">

    <TextView
        android:id="@+id/login_text_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_login_username"/>

    <EditText
        android:id="@+id/login_edit_username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/login_text_username"
        app:layout_constraintTop_toBottomOf="@id/login_text_username"/>

    <TextView
        android:id="@+id/login_text_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_text_username"
        app:layout_constraintTop_toBottomOf="@id/login_edit_username"
        android:layout_marginTop="20dp"
        android:text="@string/text_login_password"/>

    <EditText
        android:id="@+id/login_edit_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLines="1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/login_text_username"
        app:layout_constraintTop_toBottomOf="@id/login_text_password"/>

    <Button
        android:id="@+id/login_button_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/login_text_username"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"
        android:text="@string/text_login_button_login"
        android:textAllCaps="false"/>

    <Button
        android:id="@+id/login_button_insert_user"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/login_button_login"
        app:layout_constraintTop_toBottomOf="@id/login_edit_password"
        android:text="@string/text_login_button_insert_user"
        android:textAllCaps="false"/>
</androidx.constraintlayout.widget.ConstraintLayout>