<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubmitActivity"
    android:padding="50dp">

    <TextView
        android:id="@+id/sub_text_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:text="@string/text_sub_name"/>

    <EditText
        android:id="@+id/sub_edit_name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="8"
        android:maxLines="1"
        app:layout_constraintStart_toStartOf="@id/sub_text_name"
        app:layout_constraintTop_toBottomOf="@id/sub_text_name"/>

    <TextView
        android:id="@+id/sub_text_gender"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/sub_text_name"
        app:layout_constraintTop_toBottomOf="@id/sub_edit_name"
        android:text="@string/text_sub_gender"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/sub_edit_gender"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="1"
        android:maxLines="1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/sub_text_name"
        app:layout_constraintTop_toBottomOf="@id/sub_text_gender"/>

    <TextView
        android:id="@+id/sub_text_age"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="@id/sub_text_name"
        app:layout_constraintTop_toBottomOf="@id/sub_edit_gender"
        android:text="@string/text_sub_age"
        android:layout_marginTop="30dp"/>

    <EditText
        android:id="@+id/sub_edit_age"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:maxLength="3"
        android:maxLines="1"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="@id/sub_text_name"
        app:layout_constraintTop_toBottomOf="@id/sub_text_age"/>

    <Button
        android:id="@+id/sub_button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sub_edit_age"
        android:layout_marginTop="50dp"
        android:text="@string/text_button_submit"
        android:textAllCaps="false"/>

</androidx.constraintlayout.widget.ConstraintLayout>